# space-game

./: .gitignore  .gitmodules  Cargo.toml  rls.toml  todo.md
archive/spacegame-game/src/state/: mod.rs
archive/spacegame-game/src/state/ship/: ship.rs  tasks.rs  unit.rs
archive/spacegame/resources/: tiles.psd
archive/spacegame/src/: main.rs
archive/spacegame/src/input/: build_input.rs
archive/spacegame/src/ui/: mod.rs
blockgame/: Cargo.toml
blockgame/blockgame-client/: Cargo.toml
blockgame/blockgame-client/src/: main.rs  rendering.rs
blockgame/src/: main.rs  rendering.rs  s_fragment.glsl  s_vertex.glsl
common/blockengine/: Cargo.toml
common/blockengine/src/: lib.rs  rendering.rs
common/lagato-ggez/src/: lib.rs
common/lagato/src/grid/: mod.rs
factorygame/: Cargo.toml
factorygame/src/: main.rs  rendering.rs
lagato/src/grid/: grid.rs
language-markedly/grammars/: markedly.cson
markedly/: Cargo.toml
markedly-ggez/: Cargo.toml
markedly-ggez/src/: lib.rs
markedly/src/: attributes.rs  component.rs  error.rs  events.rs  lib.rs  renderer.rs  ui.rs  value.rs
markedly/src/class/: button.rs  classes.rs  container.rs  mod.rs
markedly/src/grammar/: template.pest
markedly/src/input/: mod.rs
markedly/src/render/: mod.rs
markedly/src/scripting/: mod.rs  model.rs  runtime.rs
markedly/src/template/: component.rs  language.pest  mod.rs  parse.rs  style.rs  template.pest  template.rs  value.rs
mmobs/mmobs-client/: Cargo.toml
mmobs/mmobs-client/src/: main.rs
mmobs/mmobs-server/: Cargo.toml
mtk/mtk/: Cargo.toml
mtk/mtk-tilegame/: Cargo.toml
mtk/mtk-tilegame/src/: lib.rs
mtk/mtk-tilegame/src/tasks/: mod.rs
mtk/mtk-tilegame/src/tiles/: mod.rs
mtk/mtk/src/: lib.rs
mtk/mtk/src/grid/: grid.rs  mod.rs
realmengine/realmengine-client/: Cargo.toml
realmengine/realmengine-client/src/: main.rs
realmengine/realmengine-server/: Cargo.toml
rivr/: Cargo.toml
rivr-ggez/: Cargo.toml
rivr-ggez/src/: cache.rs  lib.rs  renderer.rs
rivr/src/: error.rs  layout.rs  lib.rs  resources.rs  ui.rs
rivr/src/attributes/: mod.rs  panelbox.rs  size.rs
rivr/src/input/: mod.rs
rivr/src/layouting/: mod.rs
rivr/src/panels/: button.rs  empty.rs  label.rs  mod.rs  panel.rs  stack.rs
rivr/src/rendering/: mod.rs
space-game/: Cargo.toml
space-game-ui/: Cargo.toml
space-game/resources/: root0.mark
space-game/resources/markedly/: _style.mark  build-input.mark  build-menu-popup.mark  build-menu.mark  root.mark  save-input.mark  save-menu.mark  style.mark  style.marks
space-game/src/: main.rs
space-game/src/controller/: build_input.rs  camera_input.rs  mod.rs  save_input.rs
space-game/src/controller/ui/: mod.rs
space-game/src/game/: mod.rs  object_classes.rs
space-game/src/game/state/ship/: mod.rs  ship.rs  tasks.rs  tiles.rs  unit.rs
space-game/src/model/: mod.rs  object_class.rs
space-game/src/model/ship/: mod.rs  ship.rs  tasks.rs  tiles.rs  unit.rs
space-game/src/model/ui/: mod.rs
space-game/src/rendering/: mod.rs  ship.rs
space-game/src/view/: mod.rs  ship.rs
spacegame/: Cargo.toml
spacegame-game/: Cargo.toml
spacegame-game/src/: lib.rs  object_classes.rs
spacegame-game/src/object_class/: door.rs  mod.rs
spacegame-game/src/pathfinding/: mod.rs
spacegame-game/src/state/: build.rs  camera.rs  mod.rs
spacegame-game/src/state/ship/: mod.rs  ship.rs  tasks.rs  tiles.rs  unit.rs
spacegame-ui/: Cargo.toml
spacegame/resources/markedly/: build-menu-popup.mark
spacegame/src/: main.rs  ui.rs
spacegame/src/input/: build_input.rs  camera_input.rs  mod.rs
spacegame/src/rendering/: mod.rs  ship.rs
spacegame/src/ui/: mod.rs  top_bar.rs
src/: camera.rs  main.rs  ship.rs
src/controller/: build_input.rs  camera_input.rs  mod.rs  save_input.rs  ship_input.rs
src/controller/ui/: mod.rs
src/model/: camera.rs  input.rs  mod.rs  ship.rs
src/model/ship/: jobs.rs  mod.rs  ship.rs  tasks.rs  tiles.rs  unit.rs
src/model/ui/: mod.rs
src/view/: mod.rs  ship.rs
tdgame/: Cargo.toml
tdgame/src/: input.rs  main.rs
voxelgame/voxelgame-client/: Cargo.toml
voxelgame/voxelgame-client/src/: main.rs  rendering.rs
voxelgame/voxelgame-server/: Cargo.toml
