[workspace]
members = [
    "blockengine",
    "blockgame/blockgame-client",
    "blockgame/blockgame-server",
    "lagato",
    "rivr/rivr",
    "rivr/rivr-ggez",
    "spacegame",
    "spacegame-game",
]

# Debug mode performance without any optimizations is way too slow for games
[profile.dev]
opt-level = 1
