[workspace]
members = [
    "blockgame/client",
    "blockgame/server",
    "common/blockengine",
    "common/lagato",
    "common/lagato-ggez",
    "common/rivr",
    "common/rivr-ggez",
    "common/udpcon",
    "factorygame",
    "spacegame",
    "spacegame-game",
]

# Debug mode performance without any optimizations is way too slow for games
[profile.dev]
opt-level = 1
