[package]
name = "space-game"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
ggez = "0.4"
alga = "0.5"
nalgebra = { version = "0.13", features = ["serde-serialize"] }
slog = "2"
sloggers = "0.2"
metrohash = "1"
pathfinding = "0.6"
serde = "1"
serde_derive = "1"
rmp-serde = "0.13"
markedly = { path = "../markedly" }
markedly-ggez = { path = "../markedly-ggez" }
