[package]
name = "spacegame-game"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
alga = "0.5"
ggez = "0.4"
nalgebra = { version = "0.14", features = ["serde-serialize"] }
slog = "2"
serde = "1"
serde_derive = "1"
pathfinding = "0.7"
metrohash = "1"
lagato = { path = "../lagato" }
