[package]
name = "spacegame"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
ggez = "0.4"
nalgebra = { version = "0.14", features = ["serde-serialize"] }
slog = "2"
sloggers = "0.2"
serde = "1"
rmp-serde = "0.13"
spacegame-game = { path = "../spacegame-game" }
spacegame-ui = { path = "../spacegame-ui" }
