[package]
name = "tdgame"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
ggez = "0.4"
alga = "0.5"
nalgebra = { version = "0.14", features = ["serde-serialize"] }
slog = "2"
lagato = { path = "../common/lagato" }
lagato-ggez = { path = "../common/lagato-ggez" }
blockengine = { path = "../common/blockengine" }
blockengine-rendering = { path = "../common/blockengine-rendering" }
