[package]
name = "tdgame"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
cgmath = "0.16"
ggez = "0.4"
slog = "2"
lagato = { path = "../common/lagato" }
lagato-ggez = { path = "../common/lagato-ggez" }
blockengine = { path = "../common/blockengine" }
blockengine-rendering = { path = "../common/blockengine-rendering" }
